feat(apisix): implement token-to-uuid plugin for rewriting UUID into request header
- Add token-to-uuid plugin to rewrite UUID from an external service into the request header
- Implement plugin initialization, rewrite logic, and unauthorized response handling
- Add configuration schema validation for user service URL and endpoint
- Include support for excluding specific URIs from the rewrite function

--- a/conf/config.yaml.example
+++ b/conf/config.yaml.example
@@ -534,6 +534,7 @@ plugins:                           # plugin list (sorted by priority)
   - serverless-post-function       # priority: -2000
   - ext-plugin-post-req            # priority: -3000
   - ext-plugin-post-resp           # priority: -4000
+  - token-to-uuid                  # priority: 99
 
 stream_plugins:                    # stream plugin list (sorted by priority)
   - ip-restriction                 # priority: 3000
